// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReviewDecisionBar theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <div
    aria-label="Review decision"
    class="rh-review-decision-bar"
    role="group"
  >
    <div
      class="rh-review-decision-bar__buttons"
    >
      <button
        aria-describedby="rh-review-decision-ID-accept"
        class="rh-button rh-button--primary rh-button--sm"
        data-decision="accept"
        data-variant="primary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check rh-icon"
            data-icon="circle-check"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m16 9-5.5 5.5L8 12"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Accept
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-ID-qualify"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="qualify"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info rh-icon"
            data-icon="info"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Qualify
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-ID-edit"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="edit"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pen-line rh-icon"
            data-icon="pen-line"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 21h8"
            />
            <path
              d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Edit
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-rp-ID"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="reject"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-x rh-icon"
            data-icon="circle-x"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m15 9-6 6"
            />
            <path
              d="m9 9 6 6"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Reject
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-ID-defer"
        class="rh-button rh-button--ghost rh-button--sm"
        data-decision="defer"
        data-variant="ghost"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock rh-icon"
            data-icon="clock"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 6v6l4 2"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Defer
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-rp-ID_more_evidence"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="request_more_evidence"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search rh-icon"
            data-icon="search"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Request more evidence
          </span>
        </span>
      </button>
    </div>
    <p
      aria-hidden="true"
      class="rh-review-decision-bar__hint"
      data-testid="rh-review-decision-hint"
    />
    <div
      class="rh-visually-hidden"
    >
      <span
        id="rh-review-decision-ID-accept"
      >
        Add this to the project’s accepted scientific state.
      </span>
      <span
        id="rh-review-decision-ID-qualify"
      >
        Accept it with a stated condition or scope limit.
      </span>
      <span
        id="rh-review-decision-ID-edit"
      >
        Change the wording before deciding.
      </span>
      <span
        id="rh-review-decision-rp-ID"
      >
        Record that this was considered and not accepted.
      </span>
      <span
        id="rh-review-decision-ID-defer"
      >
        Leave it in the queue for later.
      </span>
      <span
        id="rh-review-decision-rp-ID_more_evidence"
      >
        Send it back for a stronger source before deciding.
      </span>
    </div>
  </div>
</div>
`;

exports[`ReviewDecisionBar theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <div
    aria-label="Review decision"
    class="rh-review-decision-bar"
    role="group"
  >
    <div
      class="rh-review-decision-bar__buttons"
    >
      <button
        aria-describedby="rh-review-decision-ID-accept"
        class="rh-button rh-button--primary rh-button--sm"
        data-decision="accept"
        data-variant="primary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check rh-icon"
            data-icon="circle-check"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m16 9-5.5 5.5L8 12"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Accept
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-ID-qualify"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="qualify"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info rh-icon"
            data-icon="info"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Qualify
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-ID-edit"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="edit"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pen-line rh-icon"
            data-icon="pen-line"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 21h8"
            />
            <path
              d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Edit
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-rr-ID"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="reject"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-x rh-icon"
            data-icon="circle-x"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m15 9-6 6"
            />
            <path
              d="m9 9 6 6"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Reject
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-ID-defer"
        class="rh-button rh-button--ghost rh-button--sm"
        data-decision="defer"
        data-variant="ghost"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock rh-icon"
            data-icon="clock"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 6v6l4 2"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Defer
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-rr-ID_more_evidence"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="request_more_evidence"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search rh-icon"
            data-icon="search"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Request more evidence
          </span>
        </span>
      </button>
    </div>
    <p
      aria-hidden="true"
      class="rh-review-decision-bar__hint"
      data-testid="rh-review-decision-hint"
    />
    <div
      class="rh-visually-hidden"
    >
      <span
        id="rh-review-decision-ID-accept"
      >
        Add this to the project’s accepted scientific state.
      </span>
      <span
        id="rh-review-decision-ID-qualify"
      >
        Accept it with a stated condition or scope limit.
      </span>
      <span
        id="rh-review-decision-ID-edit"
      >
        Change the wording before deciding.
      </span>
      <span
        id="rh-review-decision-rr-ID"
      >
        Record that this was considered and not accepted.
      </span>
      <span
        id="rh-review-decision-ID-defer"
      >
        Leave it in the queue for later.
      </span>
      <span
        id="rh-review-decision-rr-ID_more_evidence"
      >
        Send it back for a stronger source before deciding.
      </span>
    </div>
  </div>
</div>
`;

exports[`ReviewDecisionBar theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <div
    aria-label="Review decision"
    class="rh-review-decision-bar"
    role="group"
  >
    <div
      class="rh-review-decision-bar__buttons"
    >
      <button
        aria-describedby="rh-review-decision-ID-accept"
        class="rh-button rh-button--primary rh-button--sm"
        data-decision="accept"
        data-variant="primary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check rh-icon"
            data-icon="circle-check"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m16 9-5.5 5.5L8 12"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Accept
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-ID-qualify"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="qualify"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info rh-icon"
            data-icon="info"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Qualify
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-ID-edit"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="edit"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pen-line rh-icon"
            data-icon="pen-line"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 21h8"
            />
            <path
              d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Edit
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-rt-ID"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="reject"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-x rh-icon"
            data-icon="circle-x"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m15 9-6 6"
            />
            <path
              d="m9 9 6 6"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Reject
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-ID-defer"
        class="rh-button rh-button--ghost rh-button--sm"
        data-decision="defer"
        data-variant="ghost"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock rh-icon"
            data-icon="clock"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 6v6l4 2"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Defer
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-rt-ID_more_evidence"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="request_more_evidence"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search rh-icon"
            data-icon="search"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Request more evidence
          </span>
        </span>
      </button>
    </div>
    <p
      aria-hidden="true"
      class="rh-review-decision-bar__hint"
      data-testid="rh-review-decision-hint"
    />
    <div
      class="rh-visually-hidden"
    >
      <span
        id="rh-review-decision-ID-accept"
      >
        Add this to the project’s accepted scientific state.
      </span>
      <span
        id="rh-review-decision-ID-qualify"
      >
        Accept it with a stated condition or scope limit.
      </span>
      <span
        id="rh-review-decision-ID-edit"
      >
        Change the wording before deciding.
      </span>
      <span
        id="rh-review-decision-rt-ID"
      >
        Record that this was considered and not accepted.
      </span>
      <span
        id="rh-review-decision-ID-defer"
      >
        Leave it in the queue for later.
      </span>
      <span
        id="rh-review-decision-rt-ID_more_evidence"
      >
        Send it back for a stronger source before deciding.
      </span>
    </div>
  </div>
</div>
`;

exports[`ReviewDecisionBar theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <div
    aria-label="Review decision"
    class="rh-review-decision-bar"
    role="group"
  >
    <div
      class="rh-review-decision-bar__buttons"
    >
      <button
        aria-describedby="rh-review-decision-ID-accept"
        class="rh-button rh-button--primary rh-button--sm"
        data-decision="accept"
        data-variant="primary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check rh-icon"
            data-icon="circle-check"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m16 9-5.5 5.5L8 12"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Accept
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-ID-qualify"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="qualify"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info rh-icon"
            data-icon="info"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Qualify
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-ID-edit"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="edit"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pen-line rh-icon"
            data-icon="pen-line"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 21h8"
            />
            <path
              d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Edit
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-rv-ID"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="reject"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-x rh-icon"
            data-icon="circle-x"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m15 9-6 6"
            />
            <path
              d="m9 9 6 6"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Reject
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-ID-defer"
        class="rh-button rh-button--ghost rh-button--sm"
        data-decision="defer"
        data-variant="ghost"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock rh-icon"
            data-icon="clock"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 6v6l4 2"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Defer
          </span>
        </span>
      </button>
      <button
        aria-describedby="rh-review-decision-rv-ID_more_evidence"
        class="rh-button rh-button--secondary rh-button--sm"
        data-decision="request_more_evidence"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search rh-icon"
            data-icon="search"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Request more evidence
          </span>
        </span>
      </button>
    </div>
    <p
      aria-hidden="true"
      class="rh-review-decision-bar__hint"
      data-testid="rh-review-decision-hint"
    />
    <div
      class="rh-visually-hidden"
    >
      <span
        id="rh-review-decision-ID-accept"
      >
        Add this to the project’s accepted scientific state.
      </span>
      <span
        id="rh-review-decision-ID-qualify"
      >
        Accept it with a stated condition or scope limit.
      </span>
      <span
        id="rh-review-decision-ID-edit"
      >
        Change the wording before deciding.
      </span>
      <span
        id="rh-review-decision-rv-ID"
      >
        Record that this was considered and not accepted.
      </span>
      <span
        id="rh-review-decision-ID-defer"
      >
        Leave it in the queue for later.
      </span>
      <span
        id="rh-review-decision-rv-ID_more_evidence"
      >
        Send it back for a stronger source before deciding.
      </span>
    </div>
  </div>
</div>
`;
